class Practice {
  final int id;
  final String title;
  final String text;

  const Practice(this.id, this.title, this.text);
}